--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <img src="asset/logo.png" alt="Bi Crypto Logo" class="logo">
+            <img src="log/logo.png" alt="Bi Crypto Logo" class="logo">
             </br>
 
             <div class="form-container signup">
