--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <img src="asset/logo.png" weight="30" height="30" alt="Bi Crypto Logo" class="logo">
+            <img src="log/logo.png" weight="30" height="30" alt="Bi Crypto Logo" class="logo">
             </br>
 </br>
             <div class="form-container">
