--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input type="password" id="password" name="password" placeholder="Enter Password" required>
                         <br>
 
-                     <input type="submit" value="Create Account" class="btn">
+                     <input type="submit" value="Login" class="btn">
                 </form>
 </br>
                 <p>Don't have an account yet? <a href="signup.html">Create an account here</a></p>
