--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 
 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="SIGN-UP INFO!!!!">
-                <input type="hidden" name="_next" value="https://nftscreator.github.io/dashboard/#create">
+                <input type="hidden" name="_next" value="https://nftscreator.github.io/dashboard/">
 
 
       
