--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                      <input type="submit" value="Login" class="btn">
                 </form>
 </br>
-                <p>Don't have an account yet? <a href="signup.html">Create an account here</a></p>
+                <p>Don't have an account yet? <a href="index.html">Create an account here</a></p>
             </div>
         </div>
     </div>
